<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="signUpViewModel"
            type="com.forumapp.viewModels.SignUpViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/marginEnd"
            android:layout_marginLeft="@dimen/marginStart"
            android:layout_marginRight="@dimen/marginEnd"
            android:layout_marginStart="@dimen/marginStart"
            android:orientation="vertical"
            tools:context="com.forumapp.views.LoginActivity">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:paddingBottom="@dimen/textBottom"
                    android:text="@={signUpViewModel.email}" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/inputLayoutTop">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_username"
                    android:inputType="text"
                    android:paddingBottom="@dimen/textBottom"
                    android:text="@={signUpViewModel.userName}" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/inputLayoutTop">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:paddingBottom="@dimen/textBottom"
                    android:text="@={signUpViewModel.password}" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_conf_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/inputLayoutTop">

                <EditText
                    android:id="@+id/conf_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_conf_password"
                    android:inputType="textPassword"
                    android:paddingBottom="@dimen/textBottom"
                    android:text="@={signUpViewModel.confPassword}" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/buttonTop"
                android:maxLines="1"
                android:onClick="@{()->signUpViewModel.onSignUpButtonClick()}"
                android:text="@string/signup" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="@{()->signUpViewModel.onAlreadyAccountClick()}"
                android:padding="@dimen/textBottom"
                android:text="@string/already_account" />
        </LinearLayout>
    </ScrollView>
</layout>