<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="loginViewModel"
            type="com.forumapp.viewModels.LoginViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/marginEnd"
            android:layout_marginLeft="@dimen/marginStart"
            android:layout_marginRight="@dimen/marginEnd"
            android:layout_marginStart="@dimen/marginStart"
            android:orientation="vertical"
            tools:context="com.forumapp.views.LoginActivity">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:text="@={loginViewModel.email}"
                    android:inputType="textEmailAddress"
                    android:paddingBottom="@dimen/textBottom" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/inputLayoutTop">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:paddingBottom="@dimen/textBottom"
                    android:text="@={loginViewModel.password}" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/buttonTop"
                android:maxLines="1"
                android:onClick="@{()->loginViewModel.onLoginButtonClick()}"
                android:text="@string/login" />


            <TextView
                android:layout_width="wrap_content"
                android:text="@string/register"
                android:padding="16dp"
                android:onClick="@{()->loginViewModel.onRegisterClick()}"
                android:layout_marginTop="@dimen/registerMarginTop"
                android:layout_gravity="center_horizontal"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>
</layout>